(lang dune 2.8)
(name prbnmcn-stats)
(version 0.0.6)
(generate_opam_files true)
(source (uri git+https://github.com/igarnier/prbnmcn-stats))
(license MIT)
(authors "Ilias Garnier")
(maintainers igarnier@protonmail.com)
(package
  (name prbnmcn-stats)
  (synopsis "Basic statistics")
  (description "This package provides some samplers, PDFs and basic statistical functions.")
  (depends
    (ocaml (>= 4.14))
    (qcheck (and (>= 0.17) :with-test))
    (ocamlgraph (and (>= 2.0.0) :with-test))
    (prbnmcn-basic-structures (= 0.0.1))))
(bug_reports http://github.com/igarnier/prbnmcn-stats)
(homepage http://github.com/igarnier/prbnmcn-stats)
(use_standard_c_and_cxx_flags true)
